--- a/.github/workflows/test_upload.yml
+++ b/.github/workflows/test_upload.yml
@@ -16,12 +16,17 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install dependencies
+      - name: Install system packages
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg imagemagick
+
+      - name: Install Python dependencies
         run: |
           pip install --upgrade pip
           pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client
           pip install gTTS
-          pip install moviepy
+          pip install moviepy==1.0.3
 
       - name: Run script
         env:
