--- a/.github/workflows/test_upload.yml
+++ b/.github/workflows/test_upload.yml
@@ -1,12 +1,11 @@
 name: Test YouTube Short Upload
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # manual trigger
 
 jobs:
-  main:
+  upload-short:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -14,19 +13,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
-      - name: Install system packages
+      - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y ffmpeg imagemagick
-
-      - name: Install Python dependencies
-        run: |
-          pip install --upgrade pip
-          pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client
-          pip install gTTS
-          pip install moviepy==1.0.3
+          sudo apt-get install -y ffmpeg
+          pip install moviepy google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client
 
       - name: Run script
         env:
