--- a/.github/workflows/test_upload.yml
+++ b/.github/workflows/test_upload.yml
@@ -1,17 +1,14 @@
 name: YouTube Short Upload
 
-# Trigger manually or on schedule
 on:
   workflow_dispatch:
-  schedule:
-    - cron: '0 12 * * *'  # Optional: run daily at 12:00 UTC
 
 jobs:
-  upload:
+  build-and-upload:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repo
+    - name: Checkout Repository
       uses: actions/checkout@v3
 
     - name: Set up Python
@@ -22,13 +19,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install moviepy gTTS google-api-python-client google-auth google-auth-oauthlib
+        pip install -r requirements.txt
 
-    - name: Run video generation and upload
+    - name: Run script to generate and upload video
       env:
-        YOUTUBE_REFRESH_TOKEN: ${{ secrets.YOUTUBE_REFRESH_TOKEN }}
         YOUTUBE_CLIENT_ID: ${{ secrets.YOUTUBE_CLIENT_ID }}
         YOUTUBE_CLIENT_SECRET: ${{ secrets.YOUTUBE_CLIENT_SECRET }}
-        YOUTUBE_ACCESS_TOKEN: ${{ secrets.YOUTUBE_ACCESS_TOKEN }}
+        YOUTUBE_REFRESH_TOKEN: ${{ secrets.YOUTUBE_REFRESH_TOKEN }}
+        YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
       run: |
         python generate_and_upload.py
