--- a/.github/workflows/test_upload.yml
+++ b/.github/workflows/test_upload.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Run script
       env:
-        CLIENT_ID: ${{ secrets.CLIENT_ID }}
-        CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
-        REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
+        CLIENT_ID: ${{ secrets.YOUTUBE_CLIENT_ID }}
+        CLIENT_SECRET: ${{ secrets.YOUTUBE_CLIENT_SECRET }}
+        REFRESH_TOKEN: ${{ secrets.YOUTUBE_REFRESH_TOKEN }}
       run: python generate_and_upload.py
