--- a/.github/workflows/test_upload.yml
+++ b/.github/workflows/test_upload.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v4
       with:
-        python-version: 3.11
+        python-version: 3.10
 
     - name: Install dependencies
       run: |
@@ -27,7 +27,7 @@ jobs:
 
     - name: Run script
       env:
-        CLIENT_ID: ${{ secrets.YOUTUBE_CLIENT_ID }}
-        CLIENT_SECRET: ${{ secrets.YOUTUBE_CLIENT_SECRET }}
-        REFRESH_TOKEN: ${{ secrets.YOUTUBE_REFRESH_TOKEN }}
+        YOUTUBE_CLIENT_ID: ${{ secrets.YOUTUBE_CLIENT_ID }}
+        YOUTUBE_CLIENT_SECRET: ${{ secrets.YOUTUBE_CLIENT_SECRET }}
+        YOUTUBE_REFRESH_TOKEN: ${{ secrets.YOUTUBE_REFRESH_TOKEN }}
       run: python generate_and_upload.py
