--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 opencv-python-headless
 numpy
-gTTS
+requests
+wikipedia
 google-api-python-client
 google-auth
-wikipedia
-requests
 google-auth-oauthlib
 google-auth-httplib2
+google-cloud-texttospeech
+ffmpeg-python
