--- a/.github/workflows/test_upload.yml
+++ b/.github/workflows/test_upload.yml
@@ -3,7 +3,7 @@ name: Generate and Upload YouTube Short
 on:
   workflow_dispatch:  # Manual trigger
   schedule:
-    - cron: "0 0 * * *"  # optional: daily run at midnight UTC
+    - cron: "0 0 * * *"  # Optional: daily run at midnight UTC
 
 jobs:
   build:
@@ -30,4 +30,5 @@ jobs:
         YOUTUBE_CLIENT_ID: ${{ secrets.YOUTUBE_CLIENT_ID }}
         YOUTUBE_CLIENT_SECRET: ${{ secrets.YOUTUBE_CLIENT_SECRET }}
         YOUTUBE_REFRESH_TOKEN: ${{ secrets.YOUTUBE_REFRESH_TOKEN }}
+        GOOGLE_APPLICATION_CREDENTIALS_JSON: ${{ secrets.TTS }}
       run: python generate_and_upload.py
