--- a/.github/workflows/test_upload.yml
+++ b/.github/workflows/test_upload.yml
@@ -1,9 +1,9 @@
 name: Generate and Upload YouTube Short
 
 on:
-  workflow_dispatch:  # Manual trigger
+  workflow_dispatch:
   schedule:
-    - cron: "0 0 * * *"  # Optional: daily run at midnight UTC
+    - cron: "0 0 * * *"
 
 jobs:
   build:
@@ -30,5 +30,5 @@ jobs:
         YOUTUBE_CLIENT_ID: ${{ secrets.YOUTUBE_CLIENT_ID }}
         YOUTUBE_CLIENT_SECRET: ${{ secrets.YOUTUBE_CLIENT_SECRET }}
         YOUTUBE_REFRESH_TOKEN: ${{ secrets.YOUTUBE_REFRESH_TOKEN }}
-        GOOGLE_APPLICATION_CREDENTIALS_JSON: ${{ secrets.TTS }}
+        TTS: ${{ secrets.TTS }}
       run: python generate_and_upload.py
