--- a/.github/workflows/test_upload.yml
+++ b/.github/workflows/test_upload.yml
@@ -3,7 +3,7 @@ name: Generate and Upload YouTube Short
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * *"  # optional daily
 
 jobs:
   build:
@@ -27,8 +27,9 @@ jobs:
 
     - name: Run script
       env:
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        TTS: ${{ secrets.TTS }}
         YOUTUBE_CLIENT_ID: ${{ secrets.YOUTUBE_CLIENT_ID }}
         YOUTUBE_CLIENT_SECRET: ${{ secrets.YOUTUBE_CLIENT_SECRET }}
         YOUTUBE_REFRESH_TOKEN: ${{ secrets.YOUTUBE_REFRESH_TOKEN }}
-        TTS: ${{ secrets.TTS }}
       run: python generate_and_upload.py
