--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
 opencv-python-headless
 numpy
-requests
-wikipedia
+Pillow
+gTTS
 google-api-python-client
 google-auth
+wikipedia
+requests
 google-auth-oauthlib
 google-auth-httplib2
-google-cloud-texttospeech
-ffmpeg-python
-pydub
-openai
