--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 opencv-python-headless
 numpy
-Pillow
-wikipedia
 requests
 google-api-python-client
 google-auth
 google-auth-oauthlib
 google-auth-httplib2
 google-cloud-texttospeech
+google-generativeai
