--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 opencv-python-headless
 numpy
+Pillow
 requests
 google-api-python-client
 google-auth
@@ -7,4 +8,3 @@ google-auth-oauthlib
 google-auth-httplib2
 google-cloud-texttospeech
 google-generativeai
-pillow
