--- a/.github/workflows/test_upload.yml
+++ b/.github/workflows/test_upload.yml
@@ -1,9 +1,9 @@
 name: Generate and Upload YouTube Short
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # You can manually trigger the workflow
   schedule:
-    - cron: "0 10 * * *"  # daily at 10:00 UTC
+    - cron: "0 10 * * *"  # Example: runs daily at 10:00 UTC
 
 jobs:
   build-and-upload:
@@ -11,10 +11,10 @@ jobs:
 
     env:
       GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
-      TTS: ${{ secrets.TTS }}  # <-- Add this
       YOUTUBE_CLIENT_ID: ${{ secrets.YOUTUBE_CLIENT_ID }}
       YOUTUBE_CLIENT_SECRET: ${{ secrets.YOUTUBE_CLIENT_SECRET }}
       YOUTUBE_REFRESH_TOKEN: ${{ secrets.YOUTUBE_REFRESH_TOKEN }}
+      TTS: ${{ secrets.TTS }}  # Your full JSON content for Google TTS
 
     steps:
       - name: Checkout repository
@@ -25,11 +25,17 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg fonts-noto
+
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install google-generativeai pillow opencv-python-headless ffmpeg-python requests google-api-python-client google-auth google-auth-oauthlib google-auth-httplib2 numpy
+          pip install google-generativeai pillow opencv-python-headless requests google-api-python-client google-auth google-auth-oauthlib google-auth-httplib2 numpy
 
       - name: Run the script
-        run: python generate_and_upload.py
+        run: |
+          python generate_and_upload.py
