--- a/.github/workflows/test_upload.yml
+++ b/.github/workflows/test_upload.yml
@@ -1,9 +1,9 @@
-name: Generate and Upload YouTube Short
+name: Auto YouTube Shorts Generator
 
 on:
-  workflow_dispatch:  # You can manually trigger the workflow
   schedule:
-    - cron: "0 10 * * *"  # Example: runs daily at 10:00 UTC
+    - cron: "*/1 * * * *"   # every 1 minute (for testing)
+  workflow_dispatch:        # allow manual trigger
 
 jobs:
   build-and-upload:
@@ -12,10 +12,10 @@ jobs:
     env:
       GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
       PEXELS_API_KEY: ${{ secrets.PEXELS_API_KEY }}
+      TTS: ${{ secrets.TTS }}
       YOUTUBE_CLIENT_ID: ${{ secrets.YOUTUBE_CLIENT_ID }}
       YOUTUBE_CLIENT_SECRET: ${{ secrets.YOUTUBE_CLIENT_SECRET }}
       YOUTUBE_REFRESH_TOKEN: ${{ secrets.YOUTUBE_REFRESH_TOKEN }}
-      TTS: ${{ secrets.TTS }}  # Your full JSON content for Google TTS
 
     steps:
       - name: Checkout repository
@@ -26,17 +26,18 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y ffmpeg fonts-noto
-
-      - name: Install Python dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install google-generativeai pillow opencv-python-headless requests google-api-python-client google-auth google-auth-oauthlib google-auth-httplib2 numpy
+          pip install google-generativeai pillow opencv-python-headless ffmpeg-python requests \
+            google-api-python-client google-auth google-auth-oauthlib google-auth-httplib2 numpy
 
-      - name: Run the script
+      - name: Install ffmpeg
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y ffmpeg
+
+      - name: Run script
         run: |
           python generate_and_upload.py
