--- a/.github/workflows/test_upload.yml
+++ b/.github/workflows/test_upload.yml
@@ -2,8 +2,8 @@ name: Auto YouTube Shorts Generator
 
 on:
   schedule:
-    - cron: "*/1 * * * *"   # every 1 minute (for testing)
-  workflow_dispatch:        # allow manual trigger
+    - cron: "*/1 * * * *"   # every 2 hours
+  workflow_dispatch:
 
 jobs:
   build-and-upload:
@@ -18,26 +18,19 @@ jobs:
       YOUTUBE_REFRESH_TOKEN: ${{ secrets.YOUTUBE_REFRESH_TOKEN }}
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
-        run: |
+      - run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
           pip install google-generativeai pillow opencv-python-headless ffmpeg-python requests \
             google-api-python-client google-auth google-auth-oauthlib google-auth-httplib2 numpy
 
-      - name: Install ffmpeg
-        run: |
+      - run: |
           sudo apt-get update
           sudo apt-get install -y ffmpeg
 
-      - name: Run script
-        run: |
-          python generate_and_upload.py
+      - run: python generate_and_upload.py
