--- a/.github/workflows/test_upload.yml
+++ b/.github/workflows/test_upload.yml
@@ -31,9 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install google-generativeai pillow opencv-python-headless ffmpeg-python requests \
-            google-api-python-client google-auth google-auth-oauthlib google-auth-httplib2 numpy \
-            google-cloud-texttospeech
+          pip install -r requirements.txt
 
       - name: Install ffmpeg
         run: |
