--- a/.github/workflows/test_upload.yml
+++ b/.github/workflows/test_upload.yml
@@ -40,4 +40,4 @@ jobs:
           sudo apt-get install -y ffmpeg
 
       - name: Run script
-        run: python generate_and_upload.py
+        run: python generate_and_upload
