--- a/.github/workflows/test_upload.yml
+++ b/.github/workflows/test_upload.yml
@@ -2,7 +2,8 @@ name: Auto YouTube Shorts Generator
 
 on:
   schedule:
-  workflow_dispatch:            # allow manual trigger
+    - cron: "0 12 * * *"   # runs every day at 12:00 UTC
+  workflow_dispatch:        # allow manual trigger
 
 jobs:
   build-and-upload:
@@ -35,6 +36,10 @@ jobs:
       - name: Install ffmpeg
         run: |
           sudo apt-get update
+          sudo apt-get install -y ffmpeg
+
+      - name: Run script
+        run: python generate_and_upload.py          sudo apt-get update
           sudo apt-get install -y ffmpeg
 
       - name: Run script
