--- a/.github/workflows/test_upload.yml
+++ b/.github/workflows/test_upload.yml
@@ -39,8 +39,4 @@ jobs:
           sudo apt-get install -y ffmpeg
 
       - name: Run script
-        run: python generate_and_upload.py          sudo apt-get update
-          sudo apt-get install -y ffmpeg
-
-      - name: Run script
-        run: python generate_and_upload
+        run: python generate_and_upload.py
