--- a/.github/workflows/test_upload.yml
+++ b/.github/workflows/test_upload.yml
@@ -2,7 +2,23 @@ name: Auto YouTube Shorts Generator
 
 on:
   schedule:
-    - cron: "0 12 * * *"   # runs every day at 12:00 UTC
+    # 15 daily upload times (converted to UTC)
+    - cron: "1 1 * * *"   # 06:30 IST
+    - cron: "30 2 * * *"  # 07:30 IST
+    - cron: "0 3 * * *"   # 08:30 IST
+    - cron: "30 3 * * *"  # 09:30 IST
+    - cron: "0 4 * * *"   # 10:30 IST
+    - cron: "30 4 * * *"  # 11:30 IST
+    - cron: "0 5 * * *"   # 12:30 IST
+    - cron: "30 8 * * *"  # 14:00 IST
+    - cron: "30 9 * * *"  # 15:00 IST
+    - cron: "30 10 * * *" # 16:00 IST
+    - cron: "30 11 * * *" # 17:00 IST
+    - cron: "30 12 * * *" # 18:00 IST
+    - cron: "30 13 * * *" # 19:00 IST
+    - cron: "30 14 * * *" # 20:00 IST
+    - cron: "30 15 * * *" # 21:00 IST
+
   workflow_dispatch:        # allow manual trigger
 
 jobs:
